# xdg-native-messaging-proxy

./: NEWS.md  README.md  RELEASE_HOWTO.md  meson.build  meson.options
.github/workflows/: Containerfile  build-and-test.yml  container.yml  main.yml  release.yml
data/: meson.build  org.freedesktop.NativeMessagingProxy.service.in  org.freedesktop.NativeMessagingProxy.xml  xdg-native-messaging-proxy.service.in
src/: meson.build  xdg-native-messaging-proxy.c  xnmp-impl.c  xnmp-impl.h  xnmp-service.c  xnmp-service.h
tests/: conftest.py  meson.build  run-test.sh  test_xnmp.py  xnmp.py
tests/native-messaging-hosts/: echo.sh  org.example.cat.json  org.example.echo.json  org.example.writeonclose.json  write-on-close.py
